--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
-    "next": "^16.0.3",
+    "next": "^15.5.6",
     "qs": "^6.14.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-icons": "^5.5.0",
     "typescript": "^5.9.3",
     "zustand": "^5.0.8"
   },
@@ -32,7 +33,7 @@
     "@types/qs": "^6.14.0",
     "autoprefixer": "^10.4.18",
     "eslint": "^9.39.1",
-    "eslint-config-next": "^16.0.3",
+    "eslint-config-next": "^15.5.6",
     "lucide-react": "^0.553.0",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1"
